@@ -3,6 +3,11 @@
 1.1.0 beta 1
  * Redesigned Java API, some refactorings (#300)
  * Simplified AuthConf - more responsibility on CassandraConnectionFactory
+ * Enhanced and improved performance of the embedded Kafka framework
+    - Kafka consumer and producer added that are configurable
+    - Kafka shutdown cleaned up
+    - Kafka server more configurable for speed and use cases
+ * Added new word count demo and a new Kafka streaming word count demo
 
 1.1.0 alpha 4
  * Use asynchronous prefetching of multi-page ResultSets in CassandraRDD
